# ObjectAgents

./: .gitignore  README.md  debug_obj.py  discover_bluetooth.py  pyproject.toml
config/: scene_config.yaml  table03.json  table04.json
prompts/: action_generator.yaml  alignment_checker.yaml  frame_descriptor.yaml  narrator.yaml  object_knowledge.yaml  user_goal.yaml
scripts/: fix.sh  launch.sh
src/: act.py  agent_loop.py  base_agent.py  camera.py  controloop.py  display.py  main.py  perceive.py  physical_object.py  reason.py  routefinding.py  tablespace.py
src/utils/: ble_discover.py  camera_test.py
utils/: table_setup.py
